--- a/PowerWaiters/PowerWaiters/PowerWaiters/Views/ProfilePage.xaml
+++ b/PowerWaiters/PowerWaiters/PowerWaiters/Views/ProfilePage.xaml
@@ -5,6 +5,7 @@
              xmlns:models="clr-namespace:PowerWaiters.Models" 
              xmlns:yummy="clr-namespace:Xamarin.Forms.PancakeView;assembly=Xamarin.Forms.PancakeView" 
              xmlns:progressBar="clr-namespace:Syncfusion.XForms.ProgressBar;assembly=Syncfusion.SfProgressBar.XForms"
+             xmlns:elems="clr-namespace:PowerWaiters.Elements;assembly=PowerWaiters"
              x:Class="PowerWaiters.Views.ProfilePage">
     <ContentPage.BindingContext>
         <viewmodels:ProfileViewModel/>
@@ -26,14 +27,12 @@
                         <Label Text="{Binding UserDisplayModel.Post}" FontSize="16" TextColor="#A0000000"/>
                         <Label Text="{Binding UserDisplayModel.EmploymentDateString}" FontSize="16" TextColor="#A0000000"/>
                         <StackLayout Padding="0" Spacing="5" Margin="0" Orientation="Horizontal">
-                            <Label TextColor="Black" FontSize="17">
-                                <Label.FormattedText>
-                                    <FormattedString>
-                                        <Span Text="Общий рейтинг: "/>
-                                        <Span Text="{Binding UserDisplayModel.TotalScoresString}" TextColor="#6000FF"/>
-                                    </FormattedString>
-                                </Label.FormattedText>
-                            </Label>
+                            <Label Text="Общий рейтинг:" FontSize="17" TextColor="Black"/>
+                            <elems:GradientLabel TextColor1="#666000FF"
+                                                 TextColor2="#6000FF"
+                                                 TextColor="Black" 
+                                                 Text="{Binding UserDisplayModel.TotalScoresString}" 
+                                                 FontSize="17"/>
                             <Image Source="purple_cup" HeightRequest="20" WidthRequest="20"/>
                         </StackLayout>
                     </StackLayout>
@@ -90,21 +89,24 @@
                                                 <Label Text="{Binding Name}" 
                                                        FontSize="12" 
                                                        TextColor="Black" 
-                                                       HorizontalOptions="Center"
+                                                       HorizontalOptions="Start"
                                                        LineBreakMode="CharacterWrap"
                                                        Margin="0"/>
-                                                <Label Text="{Binding Count}" 
-                                                       FontSize="24" 
-                                                       TextColor="#6000FF"
+                                                <elems:GradientLabel Text="{Binding Count}" 
+                                                       FontSize="20" 
+                                                       TextColor1="#806000FF"
+                                                       TextColor2="#6000FF"
                                                        FontAttributes="Bold"
+                                                       TextColor="Black"
                                                        VerticalOptions="Center" 
-                                                       HorizontalOptions="Start"/>
+                                                       HorizontalOptions="Start">
+                                                </elems:GradientLabel>
                                             </StackLayout>
                                         </StackLayout>
                                     </yummy:PancakeView>
                                 </Grid>
                             </DataTemplate>
-                        </CollectionView.ItemTemplate>
+                        </CollectionView.ItemTemplate>  
                     </CollectionView>
                 </StackLayout>
 
@@ -131,14 +133,15 @@
                                             <StackLayout Grid.Column="1" VerticalOptions="CenterAndExpand" HorizontalOptions="FillAndExpand" Padding="5" Spacing="0">
                                                 <Label Text="{Binding Name}" TextColor="Black" FontSize="20"/>
                                                 <Label Text="{Binding Description}" Margin="0, 5"/>
-                                                <Label HorizontalOptions="Center" Margin="0">
-                                                    <Label.FormattedText>
-                                                        <FormattedString>
-                                                            <Span Text="{Binding ProgressString}" FontAttributes="Bold" TextColor="#6000FF" FontSize="20"/>
-                                                            <Span Text="{Binding OfPurposeString}" TextColor="#756000FF" FontSize="16"/>
-                                                        </FormattedString>
-                                                    </Label.FormattedText>
-                                                </Label>
+                                                <StackLayout Padding="0" Spacing="0" Margin="0" Orientation="Horizontal" HorizontalOptions="Center">
+                                                    <elems:GradientLabel Text="{Binding ProgressString}" 
+                                                                         FontAttributes="Bold" 
+                                                                         TextColor1="#806000FF" 
+                                                                         TextColor2="#6000FF" 
+                                                                         TextColor="Black" 
+                                                                         FontSize="20"/>
+                                                    <Label Text="{Binding OfPurposeString}" TextColor="#756000FF" FontSize="16" VerticalOptions="End"/>
+                                                </StackLayout>
                                                 <progressBar:SfLinearProgressBar Progress="{Binding ProgressPercentages}" TrackColor="#60FF788E" TrackHeight="10" CornerRadius="10">
                                                     <progressBar:SfLinearProgressBar.RangeColors>
                                                         <progressBar:RangeColorCollection>
