--- a/PowerWaiters/PowerWaiters/PowerWaiters/Views/ProfilePage.xaml
+++ b/PowerWaiters/PowerWaiters/PowerWaiters/Views/ProfilePage.xaml
@@ -13,8 +13,8 @@
     <ContentPage.Content>
         <ScrollView>
             <StackLayout Padding="10, 20" >
-                <Label Text="Мой профиль" FontSize="30" TextColor="Black" Margin="0, 10" FontAttributes="Bold"/>
-                <Grid Padding="0" Margin="0, 10">
+                <Label Text="Мой профиль" FontSize="30" TextColor="Black" Margin="0" FontAttributes="Bold"/>
+                <Grid Padding="0" Margin="0, 20, 0, 10">
                     <Grid.RowDefinitions>
                         <RowDefinition/>
                     </Grid.RowDefinitions>
@@ -119,7 +119,7 @@
                         <CollectionView.ItemTemplate>
                             <DataTemplate>
                                 <StackLayout Spacing="0">
-                                    <Grid HeightRequest="{Binding Source={RelativeSource AncestorType={x:Type viewmodels:ProfileViewModel}}, Path=AchievementBlockHeight, Mode=TwoWay}">
+                                    <Grid HeightRequest="{Binding Source={RelativeSource AncestorType={x:Type viewmodels:ProfileViewModel}}, Path=AchievementBlockHeight}">
                                         <Grid Margin="10">
                                             <Grid.ColumnDefinitions>
                                                 <ColumnDefinition Width="100"/>
